# gpugen

./: .factorypath  .gitmodules  build.gradle  gradle.properties
rust/: Cargo.toml  build.rs  lib.h
rust/src/: generator.rs  lib.rs  main.rs  shader.wgsl
src/client/java/com/crthpl/gpugen/: ExampleModClient.java
src/client/java/com/crthpl/gpugen/mixin/client/: ExampleClientMixin.java
src/client/resources/: gpugen.client.mixins.json
src/main/java/com/crthpl/gpugen/: GpuGen.java  GpuGenChunkGenerator.java  GpuGenChunkGeneratorConfig.java
src/main/java/com/crthpl/gpugen/mixin/: WorldPresetsMixin.java
src/main/resources/: fabric.mod.json  gpugen.mixins.json
src/main/resources/data/gpugen/worldgen/biome/: overworl.json
src/main/resources/data/gpugen/worldgen/world_preset/: overworl.json
src/main/resources/data/minecraft/tags/worldgen/world_preset/: normal.json
