[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mutex = "1.4.0"
bytemuck = "1.16.1"
cbindgen = "0.26.0"
easy-parallel = "3.3.1"
env_logger = "0.10"
flume = "0.11.0"
log = "0.4"
pollster = "0.3.0"
smol = "2.0.0"
wgpu = "0.20.1"

[build-dependencies]
cbindgen = "0.26.0"


[lib]
crate-type = ["cdylib", "lib"]
